--- a/repos/htx-flex/npm-exercises/package.json
+++ b/repos/htx-flex/npm-exercises/package.json
@@ -4,14 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettify": "prettier --ignore-path 'npm-exercises/node_modules/*.js && --check 'npm-exercises/**/*.js'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "download-file": "^0.1.5",
+    "ipify": "^4.0.0",
     "lodash": "^4.17.15",
+    "nodemailer": "^6.3.1",
     "wallpaper": "^4.4.1"
   }
 }
