--- a/repos/htx-flex/server-exercises/counter/package.json
+++ b/repos/htx-flex/server-exercises/counter/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "todo-list-api",
+  "name": "counter-exercise",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Patrick Moore",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1"
   }
 }
