--- a/repos/htx-flex/server-exercises/todo-list/package.json
+++ b/repos/htx-flex/server-exercises/todo-list/package.json
@@ -10,7 +10,9 @@
   "author": "Patrick Moore",
   "license": "ISC",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg-promise": "^10.3.1"
   }
 }
